[package]
name = "mechtron_core"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mechtron_common = { path = "../mechtron_common"}
mechtron= { path = "../mechtron"}
