[package]
name = "mechtronium"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.69", features=['derive'] }
serde_yaml = "0.8.15"
semver = "0.11.0"
no_proto = "0.9.60"
bytes = "1.0.1"
lazy_static = "1.4.0"
atomic = "0.5"
wasmer="1.0.2"
flexbuffers = "0.2.2"
mechtron_common = { path = "../mechtron_common"}

